fix: truncate url of ad

--- a/src/components/Ads/Ad/Ad.module.scss
+++ b/src/components/Ads/Ad/Ad.module.scss
@@ -20,6 +20,10 @@
       padding: 5px 0px;
       font-size: 16px;
       color: $gray3;
+      white-space: nowrap;
+      overflow: hidden;
+      width: 300px;
+      text-overflow: ellipsis;
     }
   }
   .characteristicsValue {
